<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- android camera -->
    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- usb camera -->
    <com.serenegiant.usb.widget.UVCCameraTextureView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
    <Button
        android:id="@+id/start_usb_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="231dp"
        android:onClick="onClickStartUsbCameraBtn"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/end_usb_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="231dp"
        android:onClick="onClickEndUsbCameraBtn"
        android:text="@string/end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/image_capture_usb_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="151dp"
        android:onClick="onClickCaptureUsbCameraBtn"
        android:text="@string/capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/video_start_usb_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="91dp"
        android:onClick="onClickVideoStartUsbCameraBtn"
        android:text="@string/video_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/video_end_usb_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="91dp"
        android:onClick="onClickVideoEndUsbCameraBtn"
        android:text="@string/video_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- android camera -->
    <Button
        android:id="@+id/start_camera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="80dp"
        android:elevation="2dp"
        android:onClick="onClickStartCameraBtn"
        android:text="@string/start_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <Button
        android:id="@+id/end_camera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:elevation="2dp"
        android:onClick="onClickEndCameraBtn"
        android:text="@string/end_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <Button
        android:id="@+id/image_capture_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:elevation="2dp"
        android:text="@string/take_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_centerline" />
    <Button
        android:id="@+id/video_capture_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="320dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="0dp"
        android:elevation="2dp"
        android:text="@string/start_capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

</androidx.constraintlayout.widget.ConstraintLayout>